<resources>
    <string name="app_name">LocationBlaBla</string>

    <string name="et_username_empty_error">Username can\'t be empty!</string>
    <string name="et_username_hint">Username</string>

    <string name="et_email_hint">Email</string>
    <string name="et_email_empty_error">Email can\'t be empty!</string>
    <string name="et_email_pattern_error">Email doesn\'t match email pattern!</string>

    <string name="et_password_hint">Password</string>
    <string name="et_repeatPassword_hint">Repeat password</string>
    <string name="et_password_empty_error">Password can\'t be empty!</string>
    <string name="et_password_length_error">Password must be at least 6 characters!</string>
    <string name="et_repeatPassword_match_error">Passwords don\'t match!</string>

    <string name="registration_error">You can\'t register with that email!</string>
    <string name="btn_register_text">Create Account</string>
    <string name="register_toolbar_text">Register</string>
    <string name="verification_email_error">Verification email was not sent!</string>
    <string name="verified_email_error">Email is not verified!</string>
    <string name="tv_createAccount_text">Create a new account</string>

    <string name="login_toolbar_text">Login</string>
    <string name="tv_login_text">Login</string>
    <string name="btn_login_text">Login</string>
    <string name="login_error">Authentication failed!</string>

    <string name="menu_logout_text">Logout</string>
    <string name="nav_users_text">Users</string>
    <string name="nav_chat_text">Chat</string>
    <string name="nav_profile_text">Profile</string>
	<string name="nav_username_text">Username</string>
    <string name="nav_email_text">Email address</string>
    <string name="nav_profile_desc">Profile image</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
	<string name="et_chat_message_hint">Type a message…</string>

    <string name="send_message_error">You can\'t send empty message!</string>
    <string name="tv_chat_left_text">Receiver Message</string>
    <string name="tv_chat_right_text">Sender Message</string>
	<string name="tv_frg_profile_text">Profile</string>
    <string name="tv_frg_profile_username_text">username</string>

    <string name="upload_image_status">Uploading</string>
    <string name="upload_image_error">Failed!</string>
    <string name="upload_image_info">Upload in progress</string>
	<string name="tv_item_seen_text">Seen</string>
	<string name="tv_item_delivered_text">Delivered</string>
	<string name="ask_for_permission_test">Permission needed</string>
    <string name="permission_read_external_storage">This permission is needed for updating your profile picture!
    </string>
    <string name="permission_accept_btn_txt">Ok</string>
    <string name="permission_denied_btn_tex">Cancel</string>
    <string name="premission_granted_text">Permission GRANTED</string>
    <string name="permission_denied">Permission DENIED</string>
	<string name="last_message_empty">No messages</string>
    <string name="msg_token_fmt"/>
    <string name="nav_chat_text_message"/>
    <string name="nav_map">Map</string>
	<string name="tv_frg_distance_text">Distance</string>

</resources>
