<?xml version="1.0" encoding="utf-8"?>
<menu
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		tools:showIn="navigation_view">

	<group android:checkableBehavior="single">
		<item android:id="@+id/nav_users"
		      android:icon="@drawable/ic_users"
		      android:title="@string/nav_users_text"/>

		<item android:id="@+id/nav_chat"
		      android:icon="@drawable/ic_chat"
		      android:title="@string/nav_chat_text"/>

		<item android:id="@+id/nav_profile"
		      android:icon="@drawable/ic_profile"
		      android:title="@string/nav_profile_text"/>
	</group>

	<item android:title="@string/menu_logout_text">
		<menu>
			<item android:id="@+id/nav_logout"
			      android:icon="@drawable/ic_logout"
			      android:title="@string/menu_logout_text"/>
		</menu>
	</item>

</menu>