<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="176dp"
              android:background="@color/colorAccent"
              android:gravity="bottom"
              android:orientation="vertical"
              android:padding="16dp"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

	<ImageView
			android:id="@+id/iv_nav_profile"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/nav_profile_desc"
			android:src="@mipmap/ic_launcher_round" />

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/tv_nav_username"
			android:paddingTop="8dp"
			android:text="@string/nav_username_text"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

	<TextView
			android:id="@+id/tv_nav_email"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/nav_email_text" />

</LinearLayout>