<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.StartActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_appName"
            android:text="@string/app_name"/>

    <Button
        android:id="@+id/btn_start_login"
        android:background="@drawable/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/btn_login_text"/>

    <Button
            android:id="@+id/btn_start_register"
            android:layout_width="wrap_content"
            android:background="@drawable/button"
            android:textColor="#fff"
            android:text="@string/btn_register_text"
            android:layout_height="wrap_content"/>

</LinearLayout>