<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		tools:context=".activity.authentication.LoginActivity">

	<include
			android:id="@+id/toolbar"
			layout="@layout/layout_bar"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:orientation="vertical"
			android:gravity="center_horizontal"
			android:layout_below="@+id/toolbar"
			android:padding="16dp"
			android:layout_height="wrap_content">

		<TextView
				android:layout_width="wrap_content"
				android:id="@+id/tv_Login"
				android:text="@string/tv_login_text"
				android:textSize="20sp"
				android:textStyle="bold"
				android:layout_height="wrap_content"/>

		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/et_login_email"
				app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textEmailAddress"
					android:hint="@string/et_email_hint"
			/>

		</android.support.design.widget.TextInputLayout>


		<android.support.design.widget.TextInputLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/et_login_password"
				app:errorEnabled="true">

			<android.support.design.widget.TextInputEditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:hint="@string/et_password_hint"/>

		</android.support.design.widget.TextInputLayout>


		<Button
				android:layout_width="match_parent"
				android:id="@+id/btn_login_login"
				android:text="@string/btn_login_text"
				android:layout_marginTop="10dp"
				android:layout_height="wrap_content"/>


	</LinearLayout>

</RelativeLayout>