<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp">

	<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:id="@+id/card_view"
			android:layout_height="wrap_content">

		<RelativeLayout
				android:layout_width="match_parent"
				android:padding="8dp"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_frg_profile_text"
					android:textColor="@color/colorPrimaryDark"
					android:textStyle="bold"/>

			<de.hdodenhof.circleimageview.CircleImageView
					android:layout_width="100dp"
					android:layout_height="100dp"
					android:id="@+id/civ_frg_profile_image"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="50dp"
					android:src="@mipmap/ic_launcher"/>

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/tv_frg_profile_username_text"
					android:layout_below="@id/civ_frg_profile_image"
					android:layout_centerHorizontal="true"
					android:layout_marginTop="15dp"
					android:textColor="@color/colorPrimaryDark"
					android:textStyle="bold"
					android:id="@+id/tv_frg_profile_username"
					android:textSize="18sp"
					android:layout_marginBottom="20dp"/>

		</RelativeLayout>



	</android.support.v7.widget.CardView>

	<TextView
			android:layout_width="wrap_content"
			android:id="@+id/tv_frg_distance"
			android:layout_below="@id/card_view"
			android:text="@string/tv_frg_distance_text"
			android:layout_centerHorizontal="true"
			android:layout_height="wrap_content"
			android:textSize="20sp"
			android:layout_marginTop="10dp"/>
	<SeekBar
			android:layout_width="match_parent"
			android:layout_marginTop="10dp"
			android:paddingTop="10dp"
			android:id="@+id/sb_frg_distance"
			android:max="25"
			android:paddingBottom="10dp"
			android:paddingLeft="30dp"
			android:paddingRight="30dp"
			android:minHeight="10dip"
			android:maxHeight="10dip"
			android:layout_below="@id/tv_frg_distance"
			android:layout_height="wrap_content"/>


</RelativeLayout>